Fix button half-hidden on mobile device

--- a/src/landing-page/LandingPage.css
+++ b/src/landing-page/LandingPage.css
@@ -53,7 +53,7 @@
     position: absolute;
     left: 50%;
     margin-left: -100px;
-    bottom: 0;
+    bottom: 5%;
     margin-bottom: 1em;
 }
 
